tests/ui/consts/control-flow/loop.stderr
error[E0015]: cannot use `for` loop on `std::ops::Range<i32>` in constants
  --> $DIR/loop.rs:53:14
   |
LL |     for i in 0..4 {
   |              ^^^^
   |
   = note: calls in constants are limited to constant functions, tuple structs and tuple variants

error[E0015]: cannot use `for` loop on `std::ops::Range<i32>` in constants
  --> $DIR/loop.rs:53:14
   |
LL |     for i in 0..4 {
   |              ^^^^
   |
   = note: calls in constants are limited to constant functions, tuple structs and tuple variants
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0015]: cannot use `for` loop on `std::ops::Range<i32>` in constants
  --> $DIR/loop.rs:59:14
   |
LL |     for i in 0..4 {
   |              ^^^^
   |
   = note: calls in constants are limited to constant functions, tuple structs and tuple variants

error[E0015]: cannot use `for` loop on `std::ops::Range<i32>` in constants
  --> $DIR/loop.rs:59:14
   |
LL |     for i in 0..4 {
   |              ^^^^
   |
   = note: calls in constants are limited to constant functions, tuple structs and tuple variants
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0015`.
